@@ -1,6 +1,12 @@
 2004-03-15  Lars Clausen  <lars@raeder.dk>
 
-	* widgets.[ch]:
+	* objects/standard/box.c (box_move_handle): More intuitive fixed
+	aspect behaviour.
+
+	* objects/standard/ellipse.c: 
+	* objects/standard/box.c: 
+
+	* lib/widgets.[ch]:
 	* app/layer_dialog.[ch]:
 	Patch from Steve Langasek <vorlon@debian.org>:
 	Fixes startup crash on Alpha (bug #137169)
